--- a/src/main/resources/org/FXML/editLog.fxml
+++ b/src/main/resources/org/FXML/editLog.fxml
@@ -46,7 +46,7 @@
                   <Font name="Verdana" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="update" layoutX="276.0" layoutY="304.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Update Change" />
+            <Button fx:id="update" layoutX="276.0" layoutY="304.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Update Change" />
             <TextArea fx:id="logDescription_e" layoutX="453.0" layoutY="148.0" prefHeight="200.0" prefWidth="200.0" />
             <Label layoutX="453.0" layoutY="133.0" text="Description">
                <font>
@@ -54,6 +54,7 @@
                </font>
             </Label>
             <Line endX="588.0" layoutX="106.0" layoutY="110.0" startX="-100.0" />
+            <Button fx:id="delete" layoutX="107.0" layoutY="304.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Delete Select Logs" />
          </children>
       </AnchorPane>
    </center>
