--- a/src/main/resources/org/FXML/signUp.fxml
+++ b/src/main/resources/org/FXML/signUp.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,21 +12,24 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="489.0">
          <children>
-            <Label layoutX="135.0" layoutY="117.0" text="First Name;" />
+            <Label layoutX="135.0" layoutY="117.0" text="First Name:" />
             <Label layoutX="135.0" layoutY="156.0" text="Last Name:" />
             <Label layoutX="136.0" layoutY="192.0" text="Username:" />
             <Label layoutX="139.0" layoutY="229.0" text="Password:" />
             <TextField fx:id="firstTextField" layoutX="205.0" layoutY="113.0" />
             <TextField fx:id="lastTextField" layoutX="205.0" layoutY="152.0" />
             <TextField fx:id="userTextField" layoutX="204.0" layoutY="188.0" />
-            <TextField fx:id="passTextField" layoutX="202.0" layoutY="225.0" />
-            <Button fx:id="signupButton" layoutX="175.0" layoutY="278.0" mnemonicParsing="false" onAction="#change" text="Sign Up" />
+            <TextField fx:id="passTextField" layoutX="205.0" layoutY="225.0" prefHeight="25.0" prefWidth="149.0" />
+            <Button fx:id="signupButton" layoutX="192.0" layoutY="328.0" mnemonicParsing="false" onAction="#change" text="Sign Up" />
             <Label layoutX="213.0" layoutY="38.0" text="Sign Up">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button fx:id="loginButton" layoutX="255.0" layoutY="278.0" mnemonicParsing="false" onAction="#login" text="Return to Login" />
+            <Button fx:id="loginButton" layoutX="274.0" layoutY="328.0" mnemonicParsing="false" onAction="#login" text="Return to Login" />
+            <CheckBox fx:id="manager" layoutX="289.0" layoutY="301.0" mnemonicParsing="false" text="Manager" />
+            <Label layoutX="133.0" layoutY="269.0" text="Manager-ID" />
+            <TextField fx:id="managerId" layoutX="205.0" layoutY="265.0" prefHeight="25.0" prefWidth="149.0" />
          </children>
       </AnchorPane>
    </children>
