--- a/src/main/resources/org/FXML/Manager.fxml
+++ b/src/main/resources/org/FXML/Manager.fxml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="482.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="482.0" prefWidth="759.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Your Manager ID:" />
-            <Label fx:id="managerId" layoutX="118.0" layoutY="14.0" text="Label" />
+            <Label layoutX="12.0" layoutY="15.0" text="Your Manager ID:">
+               <font>
+                  <Font name="Verdana" size="17.0" />
+               </font></Label>
+            <TableView fx:id="logTable" layoutX="17.0" layoutY="46.0" prefHeight="266.0" prefWidth="717.0">
+              <columns>
+                <TableColumn fx:id="date" prefWidth="75.0" text="Date" />
+                <TableColumn fx:id="startTime" prefWidth="75.0" text="Start Time" />
+                  <TableColumn fx:id="endTime" prefWidth="75.0" text="End Time" />
+                  <TableColumn fx:id="project" prefWidth="104.0" text="Project" />
+                  <TableColumn fx:id="lifeCycleStep" prefWidth="127.0" text="Life Cycle Setup" />
+                  <TableColumn fx:id="effortCategory" prefWidth="124.0" text="Effort Category" />
+                  <TableColumn fx:id="effortDetail" minWidth="0.0" prefWidth="136.0" text="Effort Detail" />
+              </columns>
+            </TableView>
+            <TextArea fx:id="description" editable="false" layoutX="17.0" layoutY="320.0" prefHeight="148.0" prefWidth="382.0" promptText="Description Detail. Click one log to show..." />
+            <Button layoutX="671.0" layoutY="443.0" mnemonicParsing="false" text="Edit Logs" />
+            <Button fx:id="logOut" layoutX="602.0" layoutY="443.0" mnemonicParsing="false" text="Logout" />
+            <Label layoutX="463.0" layoutY="314.0" text="Defect #:">
+               <font>
+                  <Font name="Verdana" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="420.0" layoutY="349.0" text="Interruption #:">
+               <font>
+                  <Font name="Verdana" size="15.0" />
+               </font>
+            </Label>
+            <TextField fx:id="managerId" editable="false" layoutX="168.0" layoutY="11.0" prefHeight="26.0" prefWidth="432.0" />
          </children>
       </AnchorPane>
    </center>
