--- a/src/main/resources/org/FXML/Manager.fxml
+++ b/src/main/resources/org/FXML/Manager.fxml
@@ -32,7 +32,7 @@
             <TextArea fx:id="description" editable="false" layoutX="17.0" layoutY="320.0" prefHeight="148.0" prefWidth="382.0" promptText="Description Detail. Click one log to show..." />
             <Button fx:id="edit" layoutX="671.0" layoutY="443.0" mnemonicParsing="false" text="Edit Logs" />
             <Button fx:id="logOut" layoutX="602.0" layoutY="443.0" mnemonicParsing="false" text="Logout" />
-            <Label layoutX="463.0" layoutY="314.0" text="Defect #:">
+            <Label layoutX="463.0" layoutY="320.0" text="Defect #:">
                <font>
                   <Font name="Verdana" size="15.0" />
                </font>
@@ -43,6 +43,11 @@
                </font>
             </Label>
             <TextField fx:id="managerId" editable="false" layoutX="168.0" layoutY="11.0" prefHeight="26.0" prefWidth="432.0" />
+            <Label fx:id="defectCount" layoutX="547.0" layoutY="319.0" text="0">
+               <font>
+                  <Font name="Verdana" size="17.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
