--- a/src/main/resources/org/FXML/editLog.fxml
+++ b/src/main/resources/org/FXML/editLog.fxml
@@ -74,7 +74,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Log out">
             <items>
-              <MenuItem mnemonicParsing="false" text="Confirm" />
+              <MenuItem fx:id="logOut" mnemonicParsing="false" text="Confirm" />
             </items>
           </Menu>
         </menus>
