--- a/src/main/resources/org/FXML/CreateLog.fxml
+++ b/src/main/resources/org/FXML/CreateLog.fxml
@@ -41,8 +41,9 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button fx:id="interruption" layoutX="606.0" layoutY="321.0" mnemonicParsing="false" text="Interruption" />
-            <Button fx:id="defect" layoutX="496.0" layoutY="321.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="82.0" text="Defect" />
+            <Button fx:id="interruption" layoutX="593.0" layoutY="328.0" mnemonicParsing="false" text="Interruption" />
+            <Button fx:id="defect" layoutX="17.0" layoutY="328.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="82.0" text="Add Defect" />
+            <Button fx:id="defectManage" layoutX="119.0" layoutY="328.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Manage Defect" />
          </children>
       </AnchorPane>
    </center>
