--- a/src/main/resources/org/FXML/ViewLog.fxml
+++ b/src/main/resources/org/FXML/ViewLog.fxml
@@ -15,11 +15,11 @@
               <columns>
                 <TableColumn fx:id="date" prefWidth="81.0" text="Date" />
                   <TableColumn fx:id="startTime" minWidth="3.0" prefWidth="66.0" text="Start Time" />
-                  <TableColumn fx:id="endTime" minWidth="3.0" prefWidth="67.0" text="End Time" />
-                  <TableColumn fx:id="project" minWidth="9.0" prefWidth="112.0" text="Project" />
+                  <TableColumn fx:id="endTime" minWidth="3.0" prefWidth="75.0" text="End Time" />
+                  <TableColumn fx:id="project" minWidth="9.0" prefWidth="104.0" text="Project" />
                   <TableColumn fx:id="lifeCycleStep" minWidth="9.0" prefWidth="133.0" text="Life Cycle Setup" />
                   <TableColumn fx:id="effortCategory" minWidth="9.0" prefWidth="126.0" text="Effort Category" />
-                  <TableColumn fx:id="effortDetail" minWidth="9.0" prefWidth="145.0" text="effortDetail" />
+                  <TableColumn fx:id="effortDetail" minWidth="9.0" prefWidth="145.0" text="Effort Detail" />
               </columns>
             </TableView>
             <Label layoutX="14.0" layoutY="13.0" text="View Logs">
